# ttipabot

./: .gitignore  CSV_Comparer.py  CSV_Comparer_2.py  HTMLhandler.py  README.md  TTIPAB register 2023-01-27 vs TTIPAB register 2023-02-03.xlsx  TTIPAB register 2023-01-27.csv  TTIPAB_to_CSV.py  TTIPABot.py  TTIPABscraper.py  credentials.json  ln_auth.py  pyproject.toml  pytest.ini  registerDump.txt  registerHTML.txt  requirements.txt
TTIPA register saves/: 2024-01-18.csv  2024-03-18.csv
TTIPAB register saves/: 2023-01-28.csv  2023-02-03.csv  2023-03-18.csv  2023-03-20.csv  2023-06-10.csv  2023-06-25.csv  2023-08-01.csv  2023-10-03.csv  2023-11-07.csv  2023-12-18.csv  2024-01-03.csv  2024-04-07.csv  2024-04-10.csv  2024-04-13.csv  2024-04-29.csv  2024-05-03.csv  2024-05-13.csv  2024-05-15.csv  2024-05-29.csv  2024-05-30.csv  2024-05-31.csv  2024-06-05.csv  2024-06-26.csv  2024-07-02.csv  2024-08-31.csv
scrapes/: 2023-07-01.csv  2023-11-18.csv  2024-05-06.csv  2024-05-09.csv  2024-05-14.csv  2024-05-16.csv  2024-05-21.csv  2024-06-06.csv  2024-06-13.csv  2024-06-15.csv  2024-06-24.csv  2024-06-27.csv  2024-07-01.csv
src/ttipabot/: __init__.py  analyser.py  api.py  app.py  chanter.py  cli.py  cmd.py  ln_auth.py  scraper.py  test.py  ttipabot.py
src/ttipabot/scrapes/: 2023-09-16.csv  2024-02-22.csv  2024-03-29.csv  2024-04-17.csv  2024-04-20.csv  (+22 more)
tests/: analysis_test.py  basic_test.py  filepaths_test.py  files_test.py  parsing_test.py
tests/Examples/: attorneyHTMLExample.txt  attorneyHTMLExample2.txt  blankAttorneyExample.txt  csvExample1.csv  csvExample2.csv
