[project]
name = "ttipabot"
version = "1.0.0"
description = "TTIPABot CLI"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "requests",
    "beautifulsoup4",
    "pandas",
    "pygame",
    "pytest",
    "lxml",
    "tabulate"
]

[project.scripts]
ttipabot = "ttipabot.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"