[project]
name = "ttipabot"
version = "1.0.0"
description = "TTIPABot CLI"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "requests",
    "beautifulsoup4",
    "pandas",
    "pytest",
    "lxml",
    "tabulate"
]

[project.scripts]
ttipabot = "ttipabot.cli:cli"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["setuptools>=69.2.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ttipabot.scrapes" = ["*.csv"]